cleanup and fix gap between action row items

--- a/projects/packages/forms/src/dashboard/inbox/style.scss
+++ b/projects/packages/forms/src/dashboard/inbox/style.scss
@@ -246,12 +246,10 @@
 
 // ACTIONS ROW
 .jp-forms__actions {
-	--wp-admin-theme-color: var(--jp-gray-80);
-	--wp-admin-theme-color-darker-10: var(--jp-gray-90);
-
 	display: flex;
 	flex-direction: row;
 	padding: 20px 64px;
+	gap: 8px;
 
 	.jp-forms__inbox.is-response-view & {
 		display: none;
@@ -261,21 +259,10 @@
 		}
 	}
 
-	button {
-		margin: 0 5px;
-	}
-
-	.components-select-control__input.components-select-control__input.components-select-control__input.components-select-control__input {
-		height: 36px;
-	}
-
-	.components-base-control__field {
-		margin-bottom: 0;
+	.components-button {
+		border-radius: var( --jp-forms-border-radius );
+		height: var( --jp-forms-input-wrapper-height );
 	}
 }
 
-.jp-forms__actions-form {
-	display: flex;
-	flex-direction: row;
-	margin-right: 15px;
-}
+
